Tweaking left position of 'browse store' to align with content below. Issue #1411

--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -7646,7 +7646,7 @@ form.flat {
   color: #FF0000;
 }
 .navbar-static-top.navbar .nav > li > a {
-  padding: 10px 0 10px 20px;
+  padding: 10px 0 10px 15px;
 }
 .header {
   position: relative;
